#fix – Fix spacing for ordered lists

--- a/scss/legacy/stylesheet.scss
+++ b/scss/legacy/stylesheet.scss
@@ -187,7 +187,7 @@ dl,
 ol,
 ul {
     margin: 0px;
-    padding-left: 16px;
+    padding-left: 24px;
 }
 
 ol>li::marker {
